@@ -11,6 +11,7 @@ Version 0.1.3 (unreleased)
 * Fixed bug in search when an intersecting word is filled in.
 * Added ability to show only unused words.
 * Improved readability of properties window.
+* Added ability to highlight characters in the grid in properties window.
 
 Version 0.1.2 (April 2, 2010)
 =============================
